--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <section class="hero">
-  <img class="hero-bg" src="/images/hero.jpg" alt="Hero">
+  <img class="hero-bg" src="/images/hero.jpg" alt="Abstract radical education visualization">
   <div class="hero-content">
     <h1 id="hero-typewriter"></h1>
   </div>
@@ -40,7 +40,7 @@
   <div class="overview-content">
     <h2>Course Overview</h2>
     <p>This course introduces participants to radical political thinking through four academic lenses: Philosophy, Political Theory, History, and Sociology. Each session provides analytical tools for understanding radical politics while maintaining a focus on local contexts. The course is designed to be accessible to those without prior academic background, emphasizing practical application and local relevance.</p>
-    <p>The idea for the course is that it is a tool for outreach.  It is designed to be used to create a space for facilitated conversation in a convivial setting. Imagine doing a listening exercise in a local community where you're introducing yourselves as local organisers and aiming to develop some community organising work.  This course could be used as a 'next step' to offer people on the doorstep when you've finished your questions.  Or it could be run as a local group activity that can be offered to a street or neighbourhood.  Or it can be run as way to promote healthy political discussion within a small group of party activists. It's a tool, and if it has a use you will find it.</p>
+    <p>The idea for the course is that it is a tool for outreach.  It is designed to be used to create a space for facilitated conversation in a convivial setting. Imagine doing a listening exercise in a local community where you're introducing yourselves as local organisers and aiming to develop some community organising work.  This course could be used as a 'next step' to offer people on the doorstep when you've finished your questions.  Or it could be run as a local group activity that can be offered to a street or neighbourhood.  Or it can be run as a way to promote healthy political discussion within a small group of party activists. It's a tool, and if it has a use you will find it.</p>
     <p>The other goal of the course is to offer a bit of an introduction to the 'language of the left' that can help people engage with radical ideas and discussions.  Often the left uses a bunch of jargon and a set of ideas that many working class people can find alienating and strange.  The aim here is to offer some space in which new comrades encounter and learn some of this language, in a relaxed and conversational way.</p>  
     <p>It also emphasises the plurality of radical politics in order to try and move away from the potential disappointment and disillusionment that can come from encountering sometimes heated debates within the left.  The goal is to suggest that disagreement and difference are not to be a source of division but a source of strength and learning.</p>
     <p>For this to work the facilitator must embrace the course philosophy and approach that is centred on the reality of people's lives and experiences.  The ideas and concepts need to be connected to lived experience and local struggles, enabling participants to teach each other what the concepts means through showing how they fit - or not - with their own experiences of bosses, landlords, cops and the state in their actual life.  The sharing of these experiences with each other is perhaps the most valuable thing the course can produce.</p>
@@ -125,7 +125,7 @@
 
 <section class="creator-bar">
   <div class="creator-content">
-      <img src="/images/Razorsmile.png" alt="Matt Lee - Razorsmile" class="creator-image">
+      <img src="/images/Razorsmile.png" alt="Matt Lee - Course Creator and Facilitator" class="creator-image">
       <div class="creator-info">
         <h3>Course Creator</h3>
         <p>Developed by Razorsmile, combining academic rigor with grassroots organizing experience. Background in philosophy and radical theory, with commitment to accessible, participatory learning methods.</p>
