Corrected the spell checker americanisms (and changed its bloody US settings, fuck off with your 'organize', it's 'organise'.  (grep -irl 'organiz' | xargs sed -i -E 's/([Oo])rganiz/\1rganis/g')

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,8 +27,8 @@
         <p>All materials are freely available to copy, share, and adapt for non-commercial political education.</p>
         <ul>
           <li><strong>Facilitators:</strong> Adapt materials to your local context and share improvements</li>
-          <li><strong>Participants:</strong> Form study groups and apply tools in your organizing practice</li>
-          <li><strong>Organizations:</strong> Run the course in your community and create local versions</li>
+          <li><strong>Participants:</strong> Form study groups and apply tools in your organising practice</li>
+          <li><strong>Organisations:</strong> Run the course in your community and create local versions</li>
         </ul>
       </div>
     </div>
@@ -128,7 +128,7 @@
       <img src="/images/Razorsmile.png" alt="Matt Lee - Course Creator and Facilitator" class="creator-image">
       <div class="creator-info">
         <h3>Course Creator</h3>
-        <p>Developed by Razorsmile, combining academic rigor with grassroots organizing experience. Background in philosophy and radical theory, with commitment to accessible, participatory learning methods.</p>
+        <p>Developed by Razorsmile, combining academic rigor with grassroots organising experience. Background in philosophy and radical theory, with commitment to accessible, participatory learning methods.</p>
         <p>Connect: <a href="https://razorsmile.org" target="_blank">razorsmile.org</a></p>
       </div>
     </div>
