--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,6 +4,7 @@
       <div class="footer-section">
         <h4>radical // education</h4>
         <p>Critical thinking for radical change</p>
+        <p>This course is available for adaptation - you can access it on Github <a href="https://github.com/razorsmile/radicalpoliticsv2" target="_blank" rel="noopener">here</a>.</p>
       </div>
       
       <div class="footer-section">
