--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,28 +1,7 @@
 <nav class="nav" role="navigation" aria-label="Main navigation">
     <ul class="nav-links">
     <li><a href="/#about" aria-label="Jump to about section">About</a></li>
-    <li><a href="/#course-overview" aria-label="Jump to course overview section">Course Overview</a></li>
-    <li class="dropdown">
-      <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="Sessions menu">
-        Sessions
-        <span class="sr-only">Press Enter or Space to open menu</span>
-      </a>
-      <ul class="dropdown-menu" role="menu">
-        <li role="menuitem"><a href="/session-1/">Week 1: Radical Traditions</a></li>
-        <li role="menuitem"><a href="/session-2/">Week 2: State Power</a></li>
-        <li role="menuitem"><a href="/session-3/">Week 3: Our Radical History</a></li>
-        <li role="menuitem"><a href="/session-4/">Week 4: Counter-Power</a></li>
-      </ul>
-    </li>
-    <li class="dropdown">
-      <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="Course materials menu">
-        Course Materials
-        <span class="sr-only">Press Enter or Space to open menu</span>
-      </a>
-      <ul class="dropdown-menu" role="menu">
-        <li role="menuitem"><a href="/facilitatorguide/">Facilitators Guide</a></li>
-        <li role="menuitem"><a href="/handouts/">Handouts</a></li>
-      </ul>
-    </li>
+    <li><a href="/sessions/" aria-label="View all course sessions">Sessions</a></li>
+    <li><a href="/materials/" aria-label="View course materials and resources">Course Materials</a></li>
   </ul>
 </nav>
