Adjusted javascript to be compatible with Content Security Policies, tided up CSS, adjusted some column widths on mobile, made some edits to Facilitators Guide

--- a/layouts/_default/materials.html
+++ b/layouts/_default/materials.html
@@ -10,7 +10,7 @@
 <section class="facilitators-section">
   <div class="content-wrapper">
     <h2 class="section-title">Facilitator's Guide</h2>
-    <p class="section-intro">Supporting Effective Political Education</p>
+    <p class="section-intro">Running a radical education session.</p>
 
     <div class="section-block">
       <h3>Overview</h3>
@@ -107,6 +107,15 @@
     <div class="section-block highlight-section">
       <h3>Facilitation Tips</h3>
 
+      <h4>The I.D.E.A. framework</h4>
+      <ul>
+        <li>Identify, Describe, Explain, Analyse</li>
+        <li>You can use this framework when asking questions of participants to see if they have understood what you've been saying.</li>
+        <li>Can people Identify (what is it), Describe (give examples - who, when, where), Explain (why is it important or interesting) and Analyse (how does this concept help - or not - and to what extent).</li>
+        <li>In effect you're asking about what (Identity), who, when, where (Describe) and why (Explain) - these are the "5 W's", often used to structure a journalistic piece.</li>
+        <li>This is only a rough rule of thumb to guide your questions as a facilitator.</li>
+      </ul>
+    
       <h4>Creating Safe Space</h4>
       <ul>
         <li>Establish confidentiality agreements (see Handout 1)</li>
