--- a/layouts/facilitator/single.html
+++ b/layouts/facilitator/single.html
@@ -3,7 +3,7 @@
   <div class="facilitator-container">
     <div class="facilitator-header">
       <h1>{{ .Title }}</h1>
-      <button class="print-button" onclick="window.print()" aria-label="Print this facilitator script for offline use" title="Print facilitator script">
+      <button class="print-button" aria-label="Print this facilitator script for offline use" title="Print facilitator script">
         <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 17h2a2 2 0 002-2v-4a2 2 0 00-2-2H5a2 2 0 00-2 2v4a2 2 0 002 2h2m2 4h6a2 2 0 002-2v-4a2 2 0 00-2-2H9a2 2 0 00-2 2v4a2 2 0 002 2zm8-12V5a2 2 0 00-2-2H9a2 2 0 00-2 2v4h10z"></path>
         </svg>
