--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
 
     <!-- Mobile Hamburger Menu -->
     <div id="mobile-menu" class="mobile-menu">
-      <div id="menu-bar" class="menu-bar" onclick="menuOnClick()">
+      <div id="menu-bar" class="menu-bar">
         <div id="bar1" class="bar"></div>
         <div id="bar2" class="bar"></div>
         <div id="bar3" class="bar"></div>
